RA-438: Fixing style on search box and adding vacancy search mode

--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Repositories\Models\RegionalTeamMetrics.cs" />
     <Compile Include="Repositories\Models\ProviderUserSearchParameters.cs" />
     <Compile Include="Repositories\Models\VacancyCounts.cs" />
+    <Compile Include="Repositories\Models\VacancySearchMode.cs" />
     <Compile Include="Repositories\Models\VacancySummaryByStatusQuery.cs" />
     <Compile Include="Repositories\Models\VacancySummaryOrderByColumn.cs" />
     <Compile Include="Repositories\Models\Order.cs" />
