--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Builders\VacancyViewModelBuilder.cs" />
     <Compile Include="Mappers\RecruitMappersTests.cs" />
     <Compile Include="Mediators\Application\ApplicationMediatorTests.cs" />
+    <Compile Include="Mediators\Application\TraineeshipApplicationMediatorTests.cs" />
     <Compile Include="Mediators\Application\ApprenticeshipApplicationMediatorTests.cs" />
     <Compile Include="Mediators\Home\HomeMediatorTests.cs" />
     <Compile Include="Mediators\Locations\LocationsTests.cs" />
