--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Repositories\IVacancyWriteRepository.cs" />
     <Compile Include="Repositories\Models\ApiUserSearchParameters.cs" />
     <Compile Include="Repositories\Models\EmployerSearchParameters.cs" />
+    <Compile Include="Repositories\Models\ManageVacancySearchMode.cs" />
     <Compile Include="Repositories\Models\RegionalTeamMetrics.cs" />
     <Compile Include="Repositories\Models\ProviderUserSearchParameters.cs" />
     <Compile Include="Repositories\Models\VacancyCounts.cs" />
