--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,9 @@ $RECYCLE.BIN/
 
 *.dgml
 tools/ContactForms/SFA.Apprenticeships.Infrastructure/Communication/Email/SendGridEmailDispatcher_.cs
+
+# =========================
+# SASS & Node process junk
+# =========================
+src/SFA.Apprenticeships.Web.Common/node_modules/
+src/SFA.Apprenticeships.Web.Common/build/
