--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -349,73 +349,74 @@
     <None Include="Content\fonts\NTA-Light-20130221.woff" />
     <None Include="Content\fonts\NTATabularNumbers-Bold.woff" />
     <None Include="Content\fonts\NTATabularNumbers-Light.woff" />
-    <None Include="Content\scss\base\mixins\_fontawesome.scss" />
-    <None Include="Content\scss\base\mixins\_buttons.scss" />
-    <None Include="Content\scss\base\mixins\_conditionals.scss" />
-    <None Include="Content\scss\base\mixins\_css3.scss" />
-    <None Include="Content\scss\base\mixins\_device-pixels.scss" />
-    <None Include="Content\scss\base\mixins\_grid.scss" />
-    <None Include="Content\scss\base\mixins\_media-player.scss" />
-    <None Include="Content\scss\base\mixins\_typography.scss" />
-    <None Include="Content\scss\base\variables\_colours.scss" />
-    <None Include="Content\scss\base\variables\_font-stack.scss" />
-    <None Include="Content\scss\base\variables\_measurements.scss" />
-    <None Include="Content\scss\base\_extends.scss" />
-    <None Include="Content\scss\base\_mixins.scss" />
-    <None Include="Content\scss\base\_reset.scss" />
-    <None Include="Content\scss\base\_variables.scss" />
-    <None Include="Content\scss\components\forms\_form-chunky-labels.scss" />
-    <None Include="Content\scss\components\forms\_form-validation.scss" />
-    <None Include="Content\scss\components\_accessibility.scss" />
-    <None Include="Content\scss\components\_buttons.scss" />
-    <None Include="Content\scss\components\_forms.scss" />
-    <None Include="Content\scss\components\_grid.scss" />
-    <None Include="Content\scss\components\_images.scss" />
-    <None Include="Content\scss\components\_jquery-ui.scss" />
-    <None Include="Content\scss\components\_lists.scss" />
-    <None Include="Content\scss\components\_misc.scss" />
-    <None Include="Content\scss\components\_modifiers.scss" />
-    <None Include="Content\scss\components\_navigation.scss" />
-    <None Include="Content\scss\components\_panels.scss" />
-    <None Include="Content\scss\components\_progress-indicator.scss" />
-    <None Include="Content\scss\components\_tables.scss" />
-    <None Include="Content\scss\components\_typography.scss" />
-    <None Include="Content\scss\components\_video.scss" />
-    <None Include="Content\scss\fe_toolkit\design-patterns\_alpha-beta.scss" />
-    <None Include="Content\scss\fe_toolkit\design-patterns\_buttons.scss" />
-    <None Include="Content\scss\fe_toolkit\design-patterns\_media-player.scss" />
-    <None Include="Content\scss\fe_toolkit\_colours.scss" />
-    <None Include="Content\scss\fe_toolkit\_conditionals.scss" />
-    <None Include="Content\scss\fe_toolkit\_css3.scss" />
-    <None Include="Content\scss\fe_toolkit\_device-pixels.scss" />
-    <None Include="Content\scss\fe_toolkit\_font_stack.scss" />
-    <None Include="Content\scss\fe_toolkit\_grid_layout.scss" />
-    <None Include="Content\scss\fe_toolkit\_measurements.scss" />
-    <None Include="Content\scss\fe_toolkit\_shims.scss" />
-    <None Include="Content\scss\fe_toolkit\_typography.scss" />
-    <None Include="Content\scss\fe_toolkit\_url-helpers.scss" />
-    <None Include="Content\scss\main-ie8.scss" />
-    <None Include="Content\scss\main.scss" />
-    <None Include="Content\scss\modules\_applications.scss" />
-    <None Include="Content\scss\modules\_footer.scss" />
-    <None Include="Content\scss\modules\_header.scss" />
-    <None Include="Content\scss\modules\_main-content.scss" />
-    <None Include="Content\scss\modules\_search-results.scss" />
-    <None Include="Content\scss\modules\_vacancies.scss" />
-    <None Include="Content\scss\vendor\_joyride-2.1.scss" />
-    <None Include="Content\scss\vendor\_select2.scss" />
-    <None Include="Content\scss\_base.scss" />
-    <None Include="Content\scss\_components.scss" />
-    <None Include="Content\scss\_ie8-hacks.scss" />
-    <None Include="Content\scss\_modules.scss" />
+    <None Include="Content\scss\styles.scss" />
+    <None Include="Content\scss_old\base\mixins\_fontawesome.scss" />
+    <None Include="Content\scss_old\base\mixins\_buttons.scss" />
+    <None Include="Content\scss_old\base\mixins\_conditionals.scss" />
+    <None Include="Content\scss_old\base\mixins\_css3.scss" />
+    <None Include="Content\scss_old\base\mixins\_device-pixels.scss" />
+    <None Include="Content\scss_old\base\mixins\_grid.scss" />
+    <None Include="Content\scss_old\base\mixins\_media-player.scss" />
+    <None Include="Content\scss_old\base\mixins\_typography.scss" />
+    <None Include="Content\scss_old\base\variables\_colours.scss" />
+    <None Include="Content\scss_old\base\variables\_font-stack.scss" />
+    <None Include="Content\scss_old\base\variables\_measurements.scss" />
+    <None Include="Content\scss_old\base\_extends.scss" />
+    <None Include="Content\scss_old\base\_mixins.scss" />
+    <None Include="Content\scss_old\base\_reset.scss" />
+    <None Include="Content\scss_old\base\_variables.scss" />
+    <None Include="Content\scss_old\components\forms\_form-chunky-labels.scss" />
+    <None Include="Content\scss_old\components\forms\_form-validation.scss" />
+    <None Include="Content\scss_old\components\_accessibility.scss" />
+    <None Include="Content\scss_old\components\_buttons.scss" />
+    <None Include="Content\scss_old\components\_forms.scss" />
+    <None Include="Content\scss_old\components\_grid.scss" />
+    <None Include="Content\scss_old\components\_images.scss" />
+    <None Include="Content\scss_old\components\_jquery-ui.scss" />
+    <None Include="Content\scss_old\components\_lists.scss" />
+    <None Include="Content\scss_old\components\_misc.scss" />
+    <None Include="Content\scss_old\components\_modifiers.scss" />
+    <None Include="Content\scss_old\components\_navigation.scss" />
+    <None Include="Content\scss_old\components\_panels.scss" />
+    <None Include="Content\scss_old\components\_progress-indicator.scss" />
+    <None Include="Content\scss_old\components\_tables.scss" />
+    <None Include="Content\scss_old\components\_typography.scss" />
+    <None Include="Content\scss_old\components\_video.scss" />
+    <None Include="Content\scss_old\fe_toolkit\design-patterns\_alpha-beta.scss" />
+    <None Include="Content\scss_old\fe_toolkit\design-patterns\_buttons.scss" />
+    <None Include="Content\scss_old\fe_toolkit\design-patterns\_media-player.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_colours.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_conditionals.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_css3.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_device-pixels.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_font_stack.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_grid_layout.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_measurements.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_shims.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_typography.scss" />
+    <None Include="Content\scss_old\fe_toolkit\_url-helpers.scss" />
+    <None Include="Content\scss_old\main-ie8.scss" />
+    <None Include="Content\scss_old\main.scss" />
+    <None Include="Content\scss_old\modules\_applications.scss" />
+    <None Include="Content\scss_old\modules\_footer.scss" />
+    <None Include="Content\scss_old\modules\_header.scss" />
+    <None Include="Content\scss_old\modules\_main-content.scss" />
+    <None Include="Content\scss_old\modules\_search-results.scss" />
+    <None Include="Content\scss_old\modules\_vacancies.scss" />
+    <None Include="Content\scss_old\vendor\_joyride-2.1.scss" />
+    <None Include="Content\scss_old\vendor\_select2.scss" />
+    <None Include="Content\scss_old\_base.scss" />
+    <None Include="Content\scss_old\_components.scss" />
+    <None Include="Content\scss_old\_ie8-hacks.scss" />
+    <None Include="Content\scss_old\_modules.scss" />
     <None Include="package.json" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Content\scss\main.css">
+    <Content Include="Content\scss_old\main.css">
       <DependentUpon>main.scss</DependentUpon>
     </Content>
-    <Content Include="Content\scss\main.min.css">
+    <Content Include="Content\scss_old\main.min.css">
       <DependentUpon>main.css</DependentUpon>
     </Content>
     <Content Include="gulpfile.js" />
