--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -483,6 +483,7 @@
     <Content Include="Content\_assets\css\fonts.css" />
     <Content Include="Content\_assets\css\main-ie8.css" />
     <Content Include="Content\_assets\css\main.css" />
+    <Content Include="Content\_assets\css\styles.css" />
     <Content Include="Content\_assets\img\apple-touch-icon-114x114.png" />
     <Content Include="Content\_assets\img\apple-touch-icon-144x144.png" />
     <Content Include="Content\_assets\img\apple-touch-icon-57x57.png" />
