--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -876,6 +876,7 @@
     <Content Include="Views\Admin\Employer.cshtml" />
     <Content Include="Views\Admin\Standards.cshtml" />
     <Content Include="Views\Admin\Frameworks.cshtml" />
+    <Content Include="Views\Admin\DeleteProviderSiteRelationship.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
