--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -376,6 +376,7 @@
     <None Include="Content\libs\vendor\nanospell\server\license\key.lic" />
     <None Include="Content\libs\vendor\nanospell\server\license\web.config" />
     <None Include="Content\scss\styles.scss" />
+    <None Include="Content\scss\_form-warnings.scss" />
     <None Include="Content\scss_old\base\mixins\_fontawesome.scss" />
     <None Include="Content\scss_old\base\mixins\_buttons.scss" />
     <None Include="Content\scss_old\base\mixins\_conditionals.scss" />
