--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -878,6 +878,7 @@
     <Content Include="Views\Admin\Frameworks.cshtml" />
     <Content Include="Views\Admin\CreateStandard.cshtml" />
     <Content Include="Views\Admin\DeleteProviderSiteRelationship.cshtml" />
+    <Content Include="Views\Admin\Standard.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
