--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Constants\ViewModels\VacancyViewModelMessages.cs" />
     <Compile Include="Constants\ViewModels\VerifyEmailViewModelMessages.cs" />
     <Compile Include="Converters\AddressViewModelConverter.cs" />
+    <Compile Include="Converters\AdminStandardViewModelConverter.cs" />
     <Compile Include="Converters\ApprenticeshipVacancyConverter.cs" />
     <Compile Include="Converters\ContactDetailsAndVacancyHistoryViewModelConverter.cs" />
     <Compile Include="Converters\EmployerViewModelConverter.cs" />
@@ -228,6 +229,7 @@
     <Compile Include="Providers\IStandardsAndFrameworksProvider.cs" />
     <Compile Include="Providers\StandardsAndFrameworksProvider.cs" />
     <Compile Include="Validators\ProviderUser\ProviderUserSearchViewModelValidator.cs" />
+    <Compile Include="Validators\Standard\StandardViewModelValidator.cs" />
     <Compile Include="Validators\VacancyStatus\BulkDeclineCandidatesViewModelMessages.cs" />
     <Compile Include="Validators\VacancyStatus\BulkDeclineCandidatesViewModelValidator.cs" />
     <Compile Include="ViewModels\Admin\StandardViewModel.cs" />
