--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -880,6 +880,7 @@
     <Content Include="Views\Admin\DeleteProviderSiteRelationship.cshtml" />
     <Content Include="Views\Admin\Standard.cshtml" />
     <Content Include="Views\Admin\CreateSector.cshtml" />
+    <Content Include="Views\Admin\Sector.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
