Disabling Redis cache to fix local development environmenty

--- a/src/SFA.Apprenticeships.Infrastructure.Caching.Memory/SFA.Apprenticeships.Infrastructure.Caching.Memory.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Caching.Memory/SFA.Apprenticeships.Infrastructure.Caching.Memory.csproj
@@ -102,6 +102,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AzureRedisCacheService.cs" />
+    <Compile Include="IoC\AzureRedisCacheRegistry.cs" />
     <Compile Include="IoC\MemoryCacheRegistry.cs" />
     <Compile Include="MemoryCacheService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
