--- a/config/Local/Configs/settings.config
+++ b/config/Local/Configs/settings.config
@@ -3,6 +3,7 @@
 	<!-- LOCAL CONFIG -->
     <appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="CacheConnection" value=""/>
     </appSettings>
 	
     <system.serviceModel>
