--- a/config/Demo/Configs/settings.config
+++ b/config/Demo/Configs/settings.config
@@ -3,6 +3,7 @@
     <!-- DEMO CONFIG -->
 	<appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="CacheConnection" value=""/>
 	</appSettings>
 	
     <system.serviceModel>
