--- a/config/Demo/Configs/settings.config
+++ b/config/Demo/Configs/settings.config
@@ -3,7 +3,7 @@
     <!-- DEMO CONFIG -->
 	<appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
-		<add key="CacheConnection" value=""/>
+		<add key="CacheConnection" value="REPLACE"/>
 	</appSettings>
 	
     <system.serviceModel>
