--- a/config/Local/Configs/settings.config
+++ b/config/Local/Configs/settings.config
@@ -3,7 +3,7 @@
 	<!-- LOCAL CONFIG -->
     <appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
-		<add key="CacheConnection" value=""/>
+		<add key="CacheConnection" value="REPLACE"/>
     </appSettings>
 	
     <system.serviceModel>
