Adding cache connection setting in settings.config to fix deployment

--- a/config/SIT/Configs/settings.config
+++ b/config/SIT/Configs/settings.config
@@ -3,6 +3,7 @@
 	<!-- SIT (System Integration Test) CONFIG -->
 	<appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="CacheConnection" value="REPLACE" />
 	</appSettings>
 	
 	<system.serviceModel>
