--- a/config/Pre/Configs/settings.config
+++ b/config/Pre/Configs/settings.config
@@ -3,6 +3,7 @@
 	<!-- PRE-PRODUCTION CONFIG -->
 	<appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="CacheConnection" value="REPLACE" />
 	</appSettings>
 	
 	<system.serviceModel>
