--- a/config/Prod/Configs/settings.config
+++ b/config/Prod/Configs/settings.config
@@ -3,6 +3,7 @@
 	<!-- PRODUCTION CONFIG -->
 	<appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
+		<add key="CacheConnection" value="REPLACE" />
 	</appSettings>
  
 	<system.serviceModel>
