--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Mediators\VacancyManagement\ConfirmDeleteActionTests.cs" />
     <Compile Include="Mediators\VacancyManagement\DeleteVacancyTests.cs" />
     <Compile Include="Mediators\VacancyManagement\TestsBase.cs" />
+    <Compile Include="Mediators\VacancyPosting\CloseVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\ReviewVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\GetEmployerTests.cs" />
     <Compile Include="Mediators\VacancyPosting\ManageDatesTests.cs" />
