--- a/src/SFA.DAS.RAA.Api/packages.config
+++ b/src/SFA.DAS.RAA.Api/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="StructureMap" version="4.4.2" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.0" targetFramework="net452" />
