--- a/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
+++ b/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
@@ -70,8 +70,10 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Handlers\ApiKeyHandlerTests.cs" />
     <Compile Include="PilotLightTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ApiKeyAuthenticationServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
@@ -97,6 +99,7 @@
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
