Post-merge tidy up

--- a/src/SFA.Apprenticeships.Web.Candidate/Web.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.config
@@ -166,6 +166,9 @@
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
       <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <remove fileExtension=".eot" />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
     </staticContent>
 
