--- a/src/SFA.DAS.RAA.Api/packages.config
+++ b/src/SFA.DAS.RAA.Api/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.1.0" targetFramework="net452" />
@@ -20,6 +21,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="StructureMap" version="4.4.2" targetFramework="net452" />
+  <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net452" />
+  <package id="structuremap.web" version="4.0.0.315" targetFramework="net452" />
+  <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net452" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.0" targetFramework="net452" />
