--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Schemas\Provider\ProviderRepository.cs" />
     <Compile Include="Schemas\Provider\ProviderUserMappers.cs" />
     <Compile Include="Schemas\Provider\ProviderUserRepository.cs" />
+    <Compile Include="Schemas\RaaApi\RaaApiUserRepository.cs" />
     <Compile Include="Schemas\Reference\Entities\LocalAuthority.cs" />
     <Compile Include="Schemas\Reference\Entities\Region.cs" />
     <Compile Include="Schemas\Reference\Entities\County.cs" />
