--- a/src/SFA.DAS.RAA.Api/Web.config
+++ b/src/SFA.DAS.RAA.Api/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <appSettings>
+    <add key="ConfigurationPath" value="Configs\settings.config" />
     <add key="APPINSIGHTS_INSTRUMENTATIONKEY" value="" />
   </appSettings>
   <system.web>
