--- a/src/SFA.DAS.RAA.Api/packages.config
+++ b/src/SFA.DAS.RAA.Api/packages.config
@@ -20,7 +20,7 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="StructureMap" version="4.4.2" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net452" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net452" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net452" />
